# IB_Local_Gateway

./: .env.example  .gitignore  IBKR_API_Usage-12-16-2025.odt  README.md  SETUP.md  TRADING_FEATURES.md  docker-compose.yml  test_ib_algos.py  test_ib_with_util.py
Code/: setup.sh
Code/local-ibkr-api/: .env.example  .gitignore  ORDER_INPUT_TEMPLATE.xlsx  README.md  README_TEAM_SETUP.md  Test_Script.sh  docker-compose.yml  gateway_jts.ini  single_test.csv  test_api.sh  test_ib_connection.py  test_orders.csv  update_prices.sh
Code/local-ibkr-api/monitoring/prometheus/: prometheus.yml
Code/local-ibkr-api/nginx/: nginx.conf
Code/local-ibkr-api/services/stocks-api/: MARKET_DATA_CONFIG.md  init_db.py  pyproject.toml  requirements.txt
Code/local-ibkr-api/services/stocks-api/app/: __init__.py  config.py  ib_client.py  ib_protocol.py  main.py
Code/local-ibkr-api/services/stocks-api/app/models/: trading.py
Code/local-ibkr-api/services/stocks-api/app/routers/: accounts.py  health.py  orders.py  positions.py
Code/local-ibkr-api/services/stocks-api/app/schemas/: trading.py
Code/local-ibkr-api/services/stocks-api/app/services/: threaded_monitor.py
Code/local-ibkr-api/services/stocks-api/app/utils/: ib_dependencies.py  logging.py  risk.py
Code/local-ibkr-api/services/stocks-api/db/: init.sql
Code/local-ibkr-api/services/stocks-api/tests/unit/: test_health_router.py
Code/local-ibkr-api/services/stocks-webapp/: Dockerfile
Plan/: Compilation_Milestones_Plan.odt  IMPLEMENTATION_SUMMARY.md  Master_Implementation_Plan.md  Master_Implementation_Plan.odt  Milestone_01_Environment_and_Structure.md  Milestone_02_Docker_and_Configuration.md  Milestone_03_FastAPI_Core_and_Health.md  Milestone_04_IBKR_Client_Integration.md  Milestone_05_API_Endpoints_and_Domain_Logic.md  Milestone_06_React_WebUI.md  Milestone_07_Monitoring_Metrics_and_Alerting.md  Milestone_08_Risk_Trading_Performance_and_Final_Checkpoint.md  Plan_A_12-10-2025.odt  Project_Binder.md  Project_Binder.odt  memory.md
Tech_Spec/: IBKR_Local_API_Complete_with_Sections_2_3_4.md  IB_Gateway-11-26-2025.odt  Tec_Spec_Local_IBKR_API_12-10-2025D.odt  Tec_Spec_Local_IBKR_API_12-10-2025E.odt  Tec_Spec_local_IBKR_API-12-10-2025A.rtf  Technical_Specification_Local_IBKR_API_12-10-2025A.odt  Technical_Specification_Local_IBKR_API_12-10-2025B.odt  Technical_Specification_Local_IBKR_API_12-10-2025C.odt
services/stocks-api/: Dockerfile  logging_config.json
services/stocks-api/app/: config.py  ib_client.py  ib_client.py.backup2  ib_client.py.bak_20260129_193250  ib_client.py.bak_repair_header_20260129_190443  ib_mock.py  main.py  main.py.bak_20260129_193250  main.py.shutdown
services/stocks-api/app/models/: trading.py.bak-20260120-205559  trading.py.bak-20260120-211007  trading.py.bak_20260120_214004  trading.py.bak_20260120_215253  trading.py.bak_autofix_20260120_221011  trading.py.bak_direct  trading.py.bak_fix_tableargs_20260120_221644  trading.py.bak_fixrepr_20260120_220352
services/stocks-api/app/routers/: __init__.py  algo_orders.py  algo_orders.py.backup.20260120_181006  bulk_orders.py  conditional_orders.py  debug.py  health.py  orders.py  (+2 more)
services/stocks-api/tests/: __init__.py
(+15 files in other folders)
